Upgrade from KfW betas, too
Instead of using 3.9.9 as a conditional, just use the current version.
This picks up beta tags properly and is future-proof.

Note that a 64-bit installer will not pick up an existing 32-bit
install (or vice versa), but there does not seem to be infrastructure
to deal with this situation easily.
Also, "downgrading" by running an older installer with a newer version
already installed will cause both versions to be simultaneously
installed; only do this if you know what you're doing.

--- a/src/windows/installer/wix/kfw.wxs
+++ b/src/windows/installer/wix/kfw.wxs
@@ -194,7 +194,7 @@
         
         <!-- KfW MSI -->
         <Upgrade Id="61211594-AAA1-4A98-A299-757326763CC7">
-            <UpgradeVersion IgnoreRemoveFailure="no" IncludeMinimum="no" Maximum="3.9.9" IncludeMaximum="yes" MigrateFeatures="yes" Property="UPGRADEKFW" />
+            <UpgradeVersion IgnoreRemoveFailure="no" IncludeMinimum="no" Maximum="$(var.VersionString)" IncludeMaximum="yes" MigrateFeatures="yes" Property="UPGRADEKFW" />
         </Upgrade>
        
         <!-- NSIS installation -->
