--- a/src/windows/installer/wix/kfw.wxs
+++ b/src/windows/installer/wix/kfw.wxs
@@ -196,7 +196,13 @@
         <Upgrade Id="61211594-AAA1-4A98-A299-757326763CC7">
             <UpgradeVersion IgnoreRemoveFailure="no" IncludeMinimum="no" Maximum="$(var.VersionString)" IncludeMaximum="yes" MigrateFeatures="yes" Property="UPGRADEKFW" />
         </Upgrade>
-       
+
+        <!-- KfW 64-bit MSI -->
+        <Upgrade Id="6DA9CD86-6028-4852-8C94-452CAC229244">
+        <?define UpgradeCode="6DA9CD86-6028-4852-8C94-452CAC229244"?>
+            <UpgradeVersion IgnoreRemoveFailure="no" IncludeMinimum="no" Maximum="$(var.VersionString)" IncludeMaximum="yes" MigrateFeatures="yes" Property="UPGRADEKFW" />
+        </Upgrade>
+
         <!-- NSIS installation -->
         <!-- The NSIS installation, being non-MSI, is detected and removed through other means. -->
         
