Use unique variable name for UPGRADEKFW64

--- a/src/windows/installer/wix/kfw.wxs
+++ b/src/windows/installer/wix/kfw.wxs
@@ -169,7 +169,7 @@
 	<AdminExecuteSequence />
         <InstallExecuteSequence>
 	<Custom Action="KillRunningProcesses" After="InstallValidate"/>
-	<RemoveExistingProducts After="KillRunningProcesses">(Not Installed) And (UPGRADEPISMERE Or UPGRADEKFW)</RemoveExistingProducts>
+	<RemoveExistingProducts After="KillRunningProcesses">(Not Installed) And (UPGRADEPISMERE Or UPGRADEKFW Or UPGRADEKFW64)</RemoveExistingProducts>
         <Custom Action="RenameKrb5Ini_Cmd" Before="RenameKrb5Ini"/>
         <Custom Action="RenameKrb5Ini" Before="InstallFinalize">SYSTEMKRB5INI &lt;&gt; ""</Custom>
 	<!-- When running with a UI, CCP_Success property is not passed down to the server. -->
@@ -199,7 +199,7 @@
 
         <!-- KfW 64-bit MSI -->
         <Upgrade Id="6DA9CD86-6028-4852-8C94-452CAC229244">
-            <UpgradeVersion IgnoreRemoveFailure="no" IncludeMinimum="no" Maximum="$(var.VersionString)" IncludeMaximum="yes" MigrateFeatures="yes" Property="UPGRADEKFW" />
+            <UpgradeVersion IgnoreRemoveFailure="no" IncludeMinimum="no" Maximum="$(var.VersionString)" IncludeMaximum="yes" MigrateFeatures="yes" Property="UPGRADEKFW64" />
         </Upgrade>
 
         <!-- NSIS installation -->
